# vaccess

./: main.py  models.py  pyproject.toml  validators.py  views.py
static/: bg.css  fonts.css  nav.css
templates/: about.html  asmts.html  dash.html  home.html  login.html  signup.html  statistics.html
