[tool.poetry]
name = "repl_python3_creatica"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-bootstrap = "^3.3.7"
django = "^3.1.3"
validators = "^0.18.1"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4.4"
werkzeug = "^1.0.1"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
